CSS, JS: Intro bug fix(menu white space, slide z-index)

--- a/Projects/Hyundai_site/css/style.css
+++ b/Projects/Hyundai_site/css/style.css
@@ -5,7 +5,7 @@
   position: fixed;
   width: 100%;
   transition: all 300ms ease-in;
-  z-index: 1;
+  z-index: 999;
 }
 #header:hover {
   background-color: #062c5e;
@@ -88,6 +88,7 @@
   margin-top: 15px;
 }
 .menu__items {
+  font-size: 0;
   text-align: center;
 }
 .menu__item {
@@ -138,6 +139,9 @@
   opacity: 0;
   transition: opacity 500ms linear;
   background-color: #000;
+}
+.slide:first-child {
+  z-index: 1;
 }
 .slide video {
   width: 100%;
@@ -251,6 +255,7 @@
   background-color: #f5f5f5;
 }
 .slideMenu__items {
+  font-size: 0;
   text-align: center;
 }
 .slideMenu__item {
